# trove

./: .gitignore  Cargo.toml  README.md  benchmark.cr  benchmark.yml  callgrind.out.3681  callgrind.out.3682  shard.yml  spec.yml
spec/: common.cr  config.yml  trove_spec.cr
src/: lib.rs  test_chest_config.yml  trove.cr
