[package]
name = "trove"
version = "0.1.0"
edition = "2024"

[dependencies]
lawn = { git = "https://github.com/mentalblood0/lawn" }
dream = { git = "https://github.com/mentalblood0/dream" }
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
uuid = { version = "1.19", features = ["v7"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
fallible-iterator = { version = "0.3", features = ["std"] }
bincode = { version = "2.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["std", "unbounded_depth"] }

[dev-dependencies]
nanorand = "0.8"
criterion = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4"
serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr" }
typetag = { version = "0.2" }
